styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/

@media screen and (min-width: 600px) {}

*, *::before, *::after {
    box-sizing: border-box;
  }
  /*
    2. Remove default margin
  */
  * {
    margin: 0;
    padding: 0;
    font-family: var(--font-family);
    background-color: var(--back-color);
  }
  /*
    3. Allow percentage-based heights in the application
  */

  html, body {
    /* height: 100%; */
    /* min-height: 100%; */

    width: 100%;

    --primary-color: #c3c2c2;
    --secondary-color: #36382E;
    --back-color: #EDE6E3;
    --font-family: "Segoe UI", "sans-serif";
    /*  */
  }
  /*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
  }
  /*
    6. Improve media defaults
  */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 30%;
  }
  /*
    7. Remove built-in form typography styles
  */
  input, button, textarea, select {
    font: inherit;
  }
  /*
    8. Avoid text overflows
  */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  /*
    9. Create a root stacking context
  */


  header {
    width: 100%;
    margin-left: auto;
    margin-right: auto;

    background-color: var(--primary-color);
    display: flex;
    justify-content: center;
    align-content: center;
    padding: 10px;

    font-size: 50pt;
    font-weight: 800;

    font-family: var(--font-family)
  }


  .flex-row {
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
  }


  footer {
    bottom: 0;
    width: 100%;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
  }

  table {
    padding: 10px;
    border: 1px solid black;
    height: 100%;
    margin: 20px;
    width: 100%;

    border-radius: 10px;
    table-layout: fixed;
  }

  th {
    font-size: 24px;
    border-bottom: 1px solid black;
    background-color: var(--primary-color);
    text-align: left;
    padding: 2px;
    padding-left: 5px;
    padding-right: 5px;
    border-radius: 5px;
  }


  tr {
  }

  td {
    padding: 5px;
  }

  td.table-date {
    min-width: 35px;
  }
  :not(td.table-date){
    width: auto;
  }

  /* for when a table data element is not empty */
  td:not(:empty) {
    border-bottom: 0.75px solid var(--secondary-color)
  }

  tr.table-info {
    font-weight: 600;
  }

  .table-img {
    max-height:100px;
    max-width: 150px;
    width: auto;
    height: auto;
  }


  #short-desc {
    padding: 10px;
    font-size: 14pt;
    max-width: 70ch;
    min-width: 30ch;

    border: 1px solid black;
    border-radius: 10px;
    margin: 20px;
  }


  .bold {
    font-weight: 800;
  }

  @media only screen and (max-width: 600px) {

    .flex-row {
      flex-direction: column;
    }
    table {
      width: 95%;
      max-width: 95%;
      table-layout: fixed;
      margin: 10px;
    }

    /* td.table-date {
      min-width: 35px;
    } */
    /* td.table-wrapped-link {
      max-width: 35px;
    } */
    /* :not(td.table-date) {

    }
    :not(td.table-date):not(td.table-wrapped-link){
      width: auto;
    } */
    

    .table-img {
      max-height:50px;
      max-width: 100px;
      width: auto;
      height: auto;
    }


    header {
      font-size: 30pt;
      padding: 5px;
      position: sticky;
      top: 0;
      border-bottom-left-radius: 10px;
      border-bottom-right-radius: 10px;
      border-bottom: 0.5px solid black;
    }

    a {
      overflow-wrap: break-word;
      word-wrap: break-word;
      word-break: break-word;
    }

    #short-desc {
      width: 95%;
      max-width: auto;
      min-width: auto;
      margin: 10px;
    }

    
  }

